# TodoList

./: CMakeLists.txt  COMPILE.md  README.md  TodoList.pro
.claude/: settings.local.json
build-win/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-win/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-win/TodoList_autogen/: deps
build-win/TodoList_autogen/UVLADIE3JM/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
src/: main.cpp  mainwindow.cpp  mainwindow.h  task.h  taskmanager.cpp  taskmanager.h
